<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/author_informationHead"
            android:textColor="#FFFFFFFF"
            android:textSize="18sp" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dip"
                        android:layout_marginTop="5dip"
                        android:text="@string/author_head"
                        android:textColor="#FFFFFFFF" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author_body"
                    android:textColor="#FFFFFFFF"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="65dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/author_contact_info"
                android:textColor="#FF0000"
                android:textSize="16sp" />


            <Button
                android:id="@+id/author_gomainmenu"
                style="@style/mainmenu_button"
                android:layout_width="93dip"
                android:layout_marginLeft="20.0dip"
                android:layout_marginTop="20.0dip"
                android:text="@string/auhor_back" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dip"
        android:layout_marginTop="15dip"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <Button
            android:layout_width="93dip"
            android:layout_height="wrap_content"
            android:text="@string/auhor_back"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp" >
        </Button>

        <Button
            android:id="@+id/author_give_autor"
            android:layout_width="93dip"
            android:layout_height="33dip"
            android:layout_marginLeft="22dip"
            android:background="@null"
            android:text="@string/auhor_suggest"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            android:visibility="gone" >
        </Button>
    </LinearLayout>

</LinearLayout>